# nla3d

./: CMakeLists.txt  README.md
src/: FEReaders.cpp  inter.cpp  main_tetra.cpp  main_tetra0_1D.cpp  main_triangle.cpp
src/lib/: CMakeLists.txt  FEReaders.cpp  FEReaders.h  FESolver.cpp  FESolver.h  FEStorage.cpp  FEStorage.h  PostProcessor.h  VtkProcessor.cpp  sys.h
src/lib/elements/: ElementFactory.cpp  INTER0.cpp  INTER0.h  INTER3.cpp  INTER3.h  TETRA0.cpp  TETRA0.h  TETRA1.cpp  TETRA1.h  TRIANGLE4.cpp  TRIANGLE4.h  element.cpp  element.h  query.h
src/lib/math/: CMakeLists.txt  EquationSolver.cpp  EquationSolver.h
test/: CMakeLists.txt  TETRA0_test.cpp  TETRA1_test.cpp
test/TRIANGLE/: triangle.cdb
